@@ -142,14 +142,14 @@ machine(struct mne *mp)
 
         case S_SET1: {
                 struct inst io = {0x0F00, 0x1F};
-                struct inst m = {0x0301, 0x1F};
+                struct inst m = {0x0310, 0x0F};
                 ebitn(io, m, /*N offset*/5);
                 break;
         }
 
         case S_SET0: {
                 struct inst io = {0x0E00, 0x1F};
-                struct inst m = {0x0300, 0x1F};
+                struct inst m = {0x0300, 0x0F};
                 ebitn(io, m, /*N offset*/5);
                 break;
         }
@@ -163,14 +163,14 @@ machine(struct mne *mp)
 
         case S_T1SN: {
                 struct inst io = {0x0D00, 0x1F};
-                struct inst m = {0x0201, 0x1F};
+                struct inst m = {0x0210, 0x0F};
                 ebitn(io, m, /*N offset*/5);
                 break;
         }
 
         case S_T0SN: {
                 struct inst io = {0x0C00, 0x1F};
-                struct inst m = {0x0200, 0x1F};
+                struct inst m = {0x0200, 0x0F};
                 ebitn(io, m, /*N offset*/5);
                 break;
         }
